added image and details

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Funny stories!</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <div class="banner">
+       <div class="image">
+        <img src="../images/lizard.jpg" alt="Lizard Image">
+       </div>
+        
+       <div class="body">
+        <h1>Life of a Lizard!</h1>
+        <h3>Author: Jane Doe</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi officiis aperiam voluptates nisi repellat dolorum accusamus earum maxime tenetur quam, dolore deserunt quisquam unde, similique quae accusantium voluptatum voluptatem nulla.
+        </p>
+       </div>
+
+    </div>
 </body>
 </html>
